log
Thu 16 May 2024 03:07:38 PM UTC: 
 tests:  0|5
total_score: 0/70
b9a2c55
Thu 16 May 2024 03:10:25 PM UTC: 
 sudoku.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
 tests:  0|5
total_score: 0/70
3460e8d
Thu 16 May 2024 03:12:30 PM UTC: 
 sudoku.c | 10 ++++++----
 1 file changed, 6 insertions(+), 4 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:49:1: error: control reaches end of non-void function [-Werror=return-type]
   49 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
548b70e
Thu 16 May 2024 03:12:53 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
f042e0f
Thu 16 May 2024 03:16:39 PM UTC: 
 sudoku.c | 12 +++++++++---
 1 file changed, 9 insertions(+), 3 deletions(-)
 tests:  2|4
total_score: 15/70
089b3c8
Thu 16 May 2024 03:24:52 PM UTC: 
 sudoku.c | 29 +++++++++++++++++++++++++++++
 1 file changed, 29 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:48:14: error: unused variable ‘k’ [-Werror=unused-variable]
   48 |    int i, j, k;
      |              ^
cc1: all warnings being treated as errors
Compilation failed
e760ebc
